--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width", initial-scale="1", maximum scale="1">
         <title>Jozef Jenkins &hyphen; Portfolio</title>
+        <link rel="stylesheet" href="js/slick/slick.css">
+        <link rel="stylesheet" href="js/slick/slick-theme.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -129,7 +131,7 @@
                     </a>
                     <a href="#" class="interests-gaming">
                         <h3>
-                            Gaming
+                            PC Gaming
                         </h3>
                         <div class="interests-gaming-image">
                             
@@ -153,6 +155,19 @@
                             </span>
                         </p>
                     </a>
+                    <a  href="#" class="interests-reading">
+                        <h3>
+                            Reading
+                        </h3>
+                        <div class="interests-reading-image">
+                            
+                        </div>
+                        <p>
+                            Read More
+                            <span class="icon-arrow-right2">
+                            </span>
+                        </p>
+                    </a>
                 </div>
             </div>
             <div class="container container examples">
@@ -166,6 +181,7 @@
             </div>
         </footer>
         <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/slick/slick.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
