--- a/about.html
+++ b/about.html
@@ -115,6 +115,58 @@
                 <h2>
                     Interests &amp; Hobbies
                 </h2>
+                <div id="modal-dnd" class="modal">
+                    <div class="modal-content">
+                        <h3 class="modal-header">
+                            Dungeons &amp; Dragons
+                        </h3>
+                        <p class="modal-paragraph">
+                            Information about the interest should go here.
+                        </p>
+                        <span class="modal-close">
+                            &times;
+                        </span>
+                    </div>
+                </div>
+                <div id="modal-programming" class="modal">
+                    <div class="modal-content">
+                        <h3 class="modal-header">
+                            Programming
+                        </h3>
+                        <p class="modal-paragraph">
+                            Information about the interest should go here.
+                        </p>
+                        <span class="modal-close">
+                            &times;
+                        </span>
+                    </div>
+                </div>
+                <div id="modal-gaming" class="modal">
+                    <div class="modal-content">
+                        <h3 class="modal-header">
+                            Gaming
+                        </h3>
+                        <p class="modal-paragraph">
+                            Information about the interest should go here.
+                        </p>
+                        <span class="modal-close">
+                            &times;
+                        </span>
+                    </div>
+                </div>
+                <div id="modal-reading" class="modal">
+                    <div class="modal-content">
+                        <h3 class="modal-header">
+                            Reading
+                        </h3>
+                        <p class="modal-paragraph">
+                            Information about the interest should go here.
+                        </p>
+                        <span class="modal-close">
+                            &times;
+                        </span>
+                    </div>
+                </div>
                 <div class="container container-interests-headers">
                     <a href="#" class="interests-dnd">
                         <h3>
