--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         Contact Us On
                     </h1>
                     <p class="contact-paragraph">
-                        Information About how to contact
+                        Information about how to contact
                     </p>
                 </div>
                 <div class="container form-container">
